@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.alphatv.gr" version="2.3.2" name="ALPHA Player" provider-name="Twilight0">
+<addon id="plugin.video.alphatv.gr" version="2.4.0" name="ALPHA Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.addon" version="16.1.000"/>
-		<import addon="script.module.tulip" version="2.8.10" />
+		<import addon="script.module.tulip" version="2.8.17" />
 		<import addon="script.module.kodi-six" version="0.0.2"/>
+		<import addon="plugin.video.youtube" version="6.8.10"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
 		<provides>video</provides>
@@ -19,7 +20,12 @@
 		<source>https://github.com/Twilight0/plugin.video.alphatv.gr</source>
 		<website>http://www.alphatv.gr/</website>
         <size>598620</size>
-		<news>[B]2.3.2[/B]
+		<news>[B]2.4.0[/B]
+- Revert of cache change back to traditional get
+- Bug fixes accross the board
+- Utilize youtube addon for resolving some videos
+
+[B]2.3.2[/B]
 - Bug fix
 
 [B]2.3.1[/B]
