@@ -1,3 +1,8 @@
+[B]2.4.0[/B]
+- Revert of cache change back to traditional get
+- Bug fixes accross the board
+- Utilize youtube addon for resolving some videos
+
 [B]2.3.2[/B]
 - Bug fix
 
